fix: teams image and pie chart mobile alignment

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -218,7 +218,6 @@ p {
 
 .mySwiper .swiper-slide {
   width: 60% !important;
-  height: 200px;
   color: white;
   display: flex;
   align-items: center;
